<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/rounded_borders_primary"
    android:orientation="vertical"
    android:padding="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/listTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/list_title"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:lines="1"
            android:maxLines="1"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/listTitle"
            android:background="@color/list_seperator"
            app:layout_constraintTop_toBottomOf="@+id/listTitle"
            tools:layout_editor_absoluteX="16dp" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/validateEditList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/validate"
            android:padding="10dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_check_black_24dp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/cancelEditList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator"
            android:layout_toStartOf="@id/validateEditList"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/cancel"
            android:padding="10dp"
            android:tint="@color/colorAccentLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/validateEditList"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_cancel_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>