...
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:srcCompat="@drawable/ic_mode_edit_accent_24dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/deleteIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="24dp"
...

            <ImageView
                android:id="@+id/badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAlignBottom="true"
                android:layout_alignBaseline="@id/text_item_on_list"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_bullet_outline"
...
