...
                    android:layout_toEndOf="@id/menu_settings"
                    android:animateLayoutChanges="true"
                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <ImageButton
                        android:id="@+id/buttonRemoveList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/delete_list"
                        android:padding="12dp"
...
            android:background="?android:attr/colorBackground"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp">

            <EditText
                android:id="@+id/addItemEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="1dp"
                android:background="@drawable/rounded_edit_text"
                android:drawableStart="@drawable/ic_add_24dp"
...
